--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,9 @@
   body {
     @apply bg-background text-foreground;
   }
+  button {
+    @apply cursor-pointer;
+  }
 }
 
 @utility custom-flex-col {
